@@ -29,11 +29,11 @@ public class DatawaveMetricsConfig extends MetricsConfigurerAdapter {
     @Override
     public void configureReporters(MetricRegistry metricRegistry) {
         try {
-            MetricsReporterFactory factory = configProps.getFactoryClass().newInstance();
+            MetricsReporterFactory factory = configProps.getFactoryClass().getDeclaredConstructor().newInstance();
             ScheduledReporter reporter = factory.forRegistry(metricRegistry).convertRatesTo(TimeUnit.SECONDS).convertDurationsTo(TimeUnit.MILLISECONDS)
                             .build(configProps.getHost(), configProps.getPort());
             registerReporter(reporter).start(configProps.getInterval(), configProps.getIntervalUnit());
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (ReflectiveOperationException e) {
             throw new RuntimeException("Unable to instantiate metrics reporter factory class " + configProps.getFactoryClass() + ": " + e.getMessage(), e);
         }
     }
